# pystructconf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  initial_project.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md  roadmap.md
