[project]
name = "pystructconf-workspace"
version = "0.0.0"
description = "Workspace for pyStructConf (core, rule-engine, cli, integrations)."
requires-python = ">=3.9,<3.15"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
  "packages/core",
  "packages/rule-engine",
  "packages/cli",
  "packages/integrations-fastapi",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = false
