[project]
name = "pystructconf-workspace"
version = "0.0.0"
description = "Workspace for pyStructConf (core, rule-engine, cli, integrations)."
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
  "packages/core",
  "packages/rule-engine",
  "packages/cli",
  "packages/integrations-fastapi",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false

[tool.uv.sources]
pystructconf-core = { workspace = true }
pystructconf-rule-engine = { workspace = true }
pystructconf-cli = { workspace = true }
pystructconf-integrations-fastapi = { workspace = true }